<resources>
    <string name="app_name">mobileSIGEC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home Page</string>
    <string name="menu_calendario">Calendário</string>
    <string name="menu_receita">Receita</string>
    <string name="menu_receitas">Receitas</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <!-- Login Screen -->
    <string name="login_system_name">Sistema de Gerenciamento de Estoque da Cozinha</string>
    <string name="login_portal_instructor">PORTAL DO INSTRUTOR</string>
    <string name="login_welcome">Bem-vindo(a)</string>
    <string name="login_access_account">Acesse sua conta</string>
    <string name="login_email_hint">E-MAIL</string>
    <string name="login_password_hint">SENHA</string>
    <string name="login_forgot_password">Esqueci minha senha</string>
    <string name="login_button_enter">Entrar</string>
    <string name="login_logo_description">Logo SIGEC</string>

    <!-- Password Recovery & Code Confirmation -->
    <string name="forgot_password_title">Recuperar Senha</string>
    <string name="forgot_password_subtitle">Digite seu e-mail cadastrado para receber o código de verificação</string>
    <string name="forgot_password_button_send">Enviar Código</string>
    <string name="forgot_password_checking">Verificando...</string>
    <string name="forgot_password_back_to_login">Voltar ao Login</string>
    <string name="confirm_code_title">Código de Confirmação</string>
    <string name="confirm_code_subtitle">Digite o código de 6 dígitos enviado para seu e-mail</string>
    <string name="confirm_code_button">Confirmar Código</string>
    <string name="resend_code_button">Reenviar Código</string>
    <string name="back_to_login">Voltar ao Login</string>

    <!-- Reset Password Screen -->
    <string name="reset_password_title">Criar Nova Senha</string>
    <string name="reset_password_subtitle">Crie sua nova senha pessoal para acessar o sistema.</string>
    <string name="reset_password_hint_new">NOVA SENHA</string>
    <string name="reset_password_hint_confirm">CONFIRMAR NOVA SENHA</string>
    <string name="reset_password_button">Redefinir Senha</string>

    <!-- Settings / Profile Strings -->
    <string name="instrutor_name">Chef Carlos Silva</string>
    <string name="docente">DOCENTE</string>
    <string name="area_atuacao">Gastronomia &amp; Confeitaria</string>
    <string name="matricula">Matrícula: 2026-98421</string>
    <string name="unidade">Unidade: Senac Aclimação</string>
    <string name="trocar_foto">Trocar Foto de Perfil</string>
    <string name="lotacao_laboratorio">LOTAÇÃO &amp; LABORATÓRIO</string>
    <string name="sigec_ano">SIGEC 2026</string>
    <string name="turma_laboratorio">Laboratório Cozinha Central - Turma 2026-A</string>
    <string name="carga_horaria">Carga Horária</string>
    <string name="carga_horaria_val">120h</string>
    <string name="turmas_ativas">Turmas Ativas</string>
    <string name="turmas_ativas_val">3</string>
    <string name="alunos_totais">Alunos Totais</string>
    <string name="alunos_totais_val">78</string>
    <string name="dados_institucionais">DADOS INSTITUCIONAIS</string>
    <string name="email_institucional_label">E-mail Institucional:</string>
    <string name="email_val">carlos.silva@sp.senac.br</string>
    <string name="telefone_ramal_label">Telefone / Ramal:</string>
    <string name="telefone_val">(11) 2187-3000 / Ramal 402</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>